# AssistedManipulation

./: .gitignore  README.md
.devcontainer/: .devcontainer.json  devcontainer.json  dockerfile  linux.devcontainer.json  windows.devcontainer.json
analysis/: main.py
scripts/: compile.bash  compile.bat  configure.bash  configure.bat
scripts/linux/: build_robot_model.bash  compile.bash  configure.bash  paper_example.bash  setup.bash
scripts/windows/: compile.bat  configure.bat  setup.bat
src/: CMakeLists.txt  analysis.py  configuration.hpp  controller.cpp  controller.hpp  cost.cpp  cost.hpp  dynamics.cpp  dynamics.hpp  gaussian.hpp  hello.cpp  main.cpp  mppi.cpp  mppi.hpp  simulator.cpp  simulator.hpp  task.hpp
src/actors/: circle.hpp  point.hpp
src/analysis/: main.py
src/application/: cost.cpp  cost.hpp  dynamics.cpp  dynamics.hpp  main.cpp
src/configuration/: configuration.hpp
src/controller/: concurrency.hpp  controller.cpp  controller.hpp  cost.hpp  eigen.hpp  energy.hpp  filter.cpp  filter.hpp  filterqp.cpp  filterqp.hpp  force_prediction.cpp  force_prediction.hpp  forecast.cpp  forecast.hpp  gaussian.hpp  json.hpp  kalman.cpp  kalman.hpp  kalmann.hpp  mppi.cpp  mppi.hpp  pid.cpp  pid.hpp  qp.cpp  qp.hpp  qpfilter.hpp  time.hpp  trajectory.cpp  trajectory.hpp
src/controller/gram_savitzky_golay/: gram_savitzky_golay.cpp
src/filter/: filter.cpp  filter.hpp  gram_savitzky_golay.cpp
src/frankaridgeback/: actor.cpp  actor.hpp  control.hpp  dof.hpp  dynamics.cpp  dynamics.hpp  model.cpp  model.hpp  pinocchio_dynamics.cpp  pinocchio_dynamics.hpp  safety.cpp  safety.hpp  simulator.cpp  simulator.hpp  state.cpp  state.hpp
src/frankaridgeback/actors/: point.hpp
src/frankaridgeback/model/: panda_mobile.urdf.xacro  planar_base.urdf.xacro  ridgeback.urdf.xacro  ridgeback.xacro  robot.urdf
src/frankaridgeback/objective/: assisted_manipulation.cpp  assisted_manipulation.hpp  point.cpp  track_point.cpp  track_point.hpp
src/logging/: assisted_manipulation.cpp  assisted_manipulation.hpp  csv.hpp  file.hpp  frankaridgeback.cpp  frankaridgeback.hpp  log.hpp  log_mppi.cpp  log_mppi.hpp  mppi.cpp  mppi.hpp  pid.cpp  pid.hpp
src/model/: panda.urdf.xacro  robot.urdf
src/mppi/: mppi.hpp  time.hpp
src/objective/: point.cpp  point.hpp
src/objectives/: point.cpp  point.hpp
src/simulation/: adaptor.hpp  frankaridgeback.cpp  frankaridgeback.hpp  raisim_dynamics.cpp  raisim_dynamics.hpp  simulator.cpp  simulator.hpp
src/simulation/actors/: circle.hpp  frankaridgeback.cpp  frankaridgeback.hpp  point.hpp
src/simulation/frankaridgeback/: actor.cpp  actor.hpp  actor_dynamics.cpp  actor_dynamics.hpp  dynamics.cpp  dynamics.hpp  raisim_dynamics.cpp  raisim_dynamics.hpp
src/test/: main.cpp  test.hpp
src/test/case/: angles.hpp  base.cpp  base.hpp  circle.cpp  circle.hpp  collaborative.cpp  collaborative.hpp  external_wrench.cpp  external_wrench.hpp  figure_eight.hpp  forecast.cpp  forecast.hpp  kalman.cpp  kalman.hpp  lissajous.hpp  manipulability.cpp  manipulability.hpp  parameter_sweep.cpp  parameter_sweep.hpp  pinocchio.cpp  pinocchio.hpp  pose.hpp  power_minimisation.cpp  power_minimisation.hpp  reach.cpp  reach.hpp  rectangle.hpp  slerp.hpp  trajectory.cpp  trajectory.hpp
src/test/case/base/: circle.cpp  circle.hpp  no_manipulation.cpp  no_manipulation.hpp  reach.cpp  reach.hpp
src/tests/: main.cpp  point.cpp  reach.cpp  reach.hpp  reach_for_point.cpp  test.hpp
vcpkg_overlays/osqp/: portfile.cmake  vcpkg.json
vcpkg_overlays/pinnochio/: portfile.cmake  vcpkg.json
vcpkg_overlays/pinocchio/: portfile.cmake  vcpkg.json
